# kokoro-server

./: .coveragerc  .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.forgeguard/: docs.yml
.github/workflows/: ci.yml  docs-validate.yml  release.yml
api/src/: main.py  serve.py
api/src/core/: audio_formats.py  auth.py  config.py  model_status.py  paths.py  telemetry.py  tls.py
api/src/inference/: base.py  kokoro_v1.py  model_manager.py
api/src/routers/: common.py  debug.py  development.py  openai_compatible.py  web_player.py
api/src/services/: audio.py  temp_manager.py  tts_service.py
api/src/services/text_processing/: normalizer.py  phonemizer.py  text_processor.py
api/tests/: conftest.py  test_health_readiness.py  test_kokoro_v1.py  test_model_unload.py  test_normalizer.py  test_openai_endpoints.py  test_review_regressions.py  test_system_endpoint.py  test_text_processor.py  test_tls.py
api/tests/integration/: conftest.py
charts/kokoro-server/: Chart.yaml  values.yaml
charts/kokoro-server/examples/: aks-tls-values.yaml
charts/kokoro-server/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  kokoro-tts-deployment.yaml  kokoro-tts-service.yaml  serviceaccount.yaml
charts/kokoro-server/templates/tests/: test-connection.yaml
docker/: build.sh  docker-compose.test.yml
docker/gpu/: Dockerfile.optimized  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docker/jetson/: Dockerfile
docker/scripts/: download_model.py  entrypoint.sh
docs/: responsible-use.md  security.md
docs/maintainers/architecture-notes/: espeak-integration.md  streaming-audio-writer.md
docs/maintainers/development/: environment.md  testing.md
docs/maintainers/release/: release-process.md
docs/site/: index.md
docs/site/architecture/: overview.md  request-lifecycle.md
docs/site/concepts/: responsible-use.md  streaming-and-audio-formats.md  voices-and-languages.md
docs/site/configuration/: environment-variables.md  overview.md
docs/site/deployment/: compose.md  container.md  hardware-profiles.md  kubernetes.md
docs/site/getting-started/: quickstart.md
docs/site/operations/: health-and-readiness.md  observability.md  security-hardening.md  upgrades.md
docs/site/reference/: compatibility.md  extended-api.md  openai-api.md
docs/site/troubleshooting/: audio-formats.md  common-errors.md
scripts/: update_version.py
scripts/docs/: check_external_links.py  validate_docs.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppShell.tsx  GpuMonitor.tsx  SettingsDialog.tsx
web/src/components/tts/: AudioPlayer.tsx  VoicePicker.tsx
web/src/lib/: apiClient.ts  health.ts  system.ts  ttsApi.ts
web/src/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Field.tsx  IconButton.tsx  Input.tsx  Select.tsx  Slider.tsx  Spinner.tsx  TextArea.tsx  Toast.tsx  cn.ts  icons.tsx  index.ts  theme.tsx
